--- a/src/components/Work/index.scss
+++ b/src/components/Work/index.scss
@@ -28,6 +28,7 @@
 
 .projects > div{
     width: 75%;
+    height: 100%;
     text-align: justify;
     align-items: center;
     justify-content: center;
@@ -35,6 +36,7 @@
     color: white;
     border-radius: 20px;
     padding: 7%;
+    font-family:Arial, Helvetica, sans-serif;
     
 }
 
@@ -47,8 +49,8 @@
 
 
 .project_topic{
-    font-size: 0.7vw;
-    font-size: bold;
+    font-size: 0.8vw;
+    font-weight: bold;
 }
 
 .project_button{
