--- a/src/components/Contact/index.scss
+++ b/src/components/Contact/index.scss
@@ -2,7 +2,7 @@
 .contact{
   margin: auto;
   height: 100vh;
- 
+  padding-top: 10%;
   background-color: rgb(13, 14, 15);
 
 }
@@ -11,7 +11,7 @@
   justify-content: center;
   align-self: center;
   margin: auto;
-  margin-top: 7%;
+  
   width: 50%;
   font-size: 1vw;
   border: 0.1px solid rgb(85, 85, 85);
